# MMORPG

./: .dockerignore  .gitignore  CLAUDE.md  README.md  RELEASE.md  docker-compose.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
Code/: .env.exemple  Cargo.toml
Code/dedicated_server/: Cargo.toml
Code/dedicated_server/src/: main.rs
Code/gatekeeper/: Cargo.toml
Code/gatekeeper/src/: main.rs
Code/orchestrator/: Cargo.toml
Code/orchestrator/src/: main.rs
Code/shared/: Cargo.toml
Code/shared/src/: lib.rs
Code/test_client/: Cargo.toml
Code/test_client/src/: main.rs
External_Dependencies/game_sockets/: Cargo.toml
External_Dependencies/game_sockets/src/protocols/: mod.rs  quic_protocol.rs
VMCode/Host_Agent/: .env.exemple  Cargo.toml
VMCode/Host_Agent/src/: main.rs
debian/: build-debs.sh
debian/central-fleet/DEBIAN/: control  postinst  prerm
debian/central-fleet/etc/default/: mmorpg-central-fleet
debian/central-fleet/etc/mmorpg/central-fleet/: docker-compose.yaml
debian/central-fleet/lib/systemd/system/: mmorpg-central-fleet.service
debian/fleet-ds/DEBIAN/: control  postinst  prerm
debian/fleet-ds/etc/default/: mmorpg-host-agent
debian/fleet-ds/lib/systemd/system/: mmorpg-host-agent.service
debian/gatekeeper/DEBIAN/: control  postinst  prerm
debian/gatekeeper/etc/default/: mmorpg-gatekeeper
debian/gatekeeper/etc/mmorpg/gatekeeper/: docker-compose.yaml
debian/gatekeeper/lib/systemd/system/: mmorpg-gatekeeper.service
debian/monolith/DEBIAN/: control  postinst  prerm
debian/monolith/etc/default/: mmorpg-monolith
debian/monolith/etc/mmorpg/monolith/: docker-compose.yaml
debian/monolith/lib/systemd/system/: mmorpg-monolith.service
debian/orchestrator/DEBIAN/: control  postinst  prerm
debian/orchestrator/etc/default/: mmorpg-orchestrator
debian/orchestrator/etc/mmorpg/orchestrator/: docker-compose.yaml
debian/orchestrator/lib/systemd/system/: mmorpg-orchestrator.service
debian/redis/DEBIAN/: control  postinst  prerm
debian/redis/etc/default/: mmorpg-redis
debian/redis/etc/mmorpg/redis/: docker-compose.yaml
debian/redis/lib/systemd/system/: mmorpg-redis.service
docker/: dedicated_server.Dockerfile  gatekeeper.Dockerfile  orchestrator.Dockerfile
