[package]
name = "dedicated_server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
game_sockets = { path = "../../External_Dependencies/game_sockets", default-features = false, features = ["quic"] }
bevy = { version = "0.18", default-features = false }
tokio = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
dotenvy = "0.15"