[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
game_sockets = { path = "../../External_Dependencies/game_sockets", default-features = false, features = ["quic"] }
tokio = { workspace = true }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = "1"
async-trait = "0.1"
dotenvy = "0.15"