[package]
name = "test_client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
game_sockets = { path = "../../External_Dependencies/game_sockets", default-features = false, features = ["quic"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bytes = "1"
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
eventsource-stream = "0.2"
futures-util = "0.3"
urlencoding = "2"