[package]
name = "host_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../Code/shared" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
dotenvy = "0.15"
hostname = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
strip = true